--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>AngularSecurity</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; script-src 'self' https://apis.google.com;">
+  <!-- meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; script-src 'self' https://apis.google.com;" -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
